--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -7,8 +7,8 @@ menu:
 
 # SubNav
 subnav:
-  github: https://github.com/CrazyMilk
-  zhihu: https://zhihu.com/people/CrazyMilk
+  github: https://github.com/do-do-do
+  #zhihu: "#"
   #psn: "#"
   #zhihu: "#"
   #douban: "#"
