--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -110,4 +110,4 @@ friends:
   JuniperPhoton: http://juniperphoton.net/
   yazoo: http://yazhuo.github.io/
 
-aboutme: 嗯...我是喵星人，我从火星来，任务是让你们猜不透~
+aboutme: 为了保卫地球而存在
