--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Melville'blog
 subtitle:
-description: 追求卓越，成功就会在不经意间追上你
+description: 邪乎到家，必有鬼
 keywords:
 author: Melville
 language: zh-Hans
