--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,8 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-## Plugins: https://hexo.io/plugins/
+Plugins: 
+- hexo-generate-feed
 ## Themes: https://hexo.io/themes/
 theme: next
 
