--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,14 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https:melville.club
 root: /
-permalink: :title.html
+#permalink: :title
+permalink: /posts/:id.html
 permalink_defaults:
+
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
 
 # Directory
 source_dir: source
@@ -69,6 +75,11 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+nofollow:
+    enable: true
+    exclude:
+    - ## 不加nofollow的链接
 
 # Extensions
 Plugins: 
