--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
   },
   "dependencies": {
     "gitment": "0.0.3",
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.1",
     "hexo": "^3.7.0",
+    "hexo-autonofollow": "^1.0.1",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.5",
