--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.7.1"
   },
   "dependencies": {
+    "gitalk": "^1.4.1",
     "gitment": "0.0.3",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
@@ -29,6 +30,7 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "hexo-wordcount": "^6.0.1"
   }
 }
