--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -150,8 +150,8 @@ links_title: 推荐阅读
 links_layout: block
 #links_layout: inline
 links:
-  C语言结构体中char-0-和char-1-的用法: https://do-do-do.github.io/C%E8%AF%AD%E8%A8%80%E7%BB%93%E6%9E%84%E4%BD%93%E4%B8%ADchar-0-%E5%92%8Cchar-1-%E7%9A%84%E7%94%A8%E6%B3%95.html
-  Linux64位系统兼容32位应用程序: https://do-do-do.github.io/Linux64%E4%BD%8D%E7%B3%BB%E7%BB%9F%E5%85%BC%E5%AE%B932%E4%BD%8D%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.html
+  char-0-和char-1-的用法: https://melville.club/posts/a-2018-09-18-17-45-22.html
+  Linux64位系统兼容32位应用程序: https://melville.club/posts/a-2018-09-18-17-21-40.html
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
 # in site  directory(source/uploads): /uploads/avatar.gif
@@ -279,7 +279,7 @@ custom_logo:
 # Available value:
 #    normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night eighties
+highlight_theme: normal
 
 
 # ---------------------------------------------------------------
@@ -380,7 +380,7 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
 valine:
-  enable: true
+  enable: false
   appid: pvhiBwpfHOUBspkJ5iEJ5LFw-gzGzoHsz # your leancloud application appid
   appkey: LrKlAVEWOYfv1JwbdQGXAl3K # your leancloud application appkey
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
@@ -414,6 +414,15 @@ gitment:
   client_secret: 71f3140ec76b6490354d89893ba439a498dac435 # EITHER this or proxy_gateway, Github access secret token for the Gitment
   proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
   redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
+
+gitalk:
+  enable: true
+  githubID: do-do-do
+  repo: do-do-do.github.io
+  ClientID: 055380300cdb69d41230
+  ClientSecret: 072c57487cceef6ce3ef403b67ce600f2ca3dbc8
+  adminUser: do-do-do
+  distractionFreeMode: true
 
 # Baidu Share
 # Available value:
@@ -533,7 +542,7 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: true
+  enable: ture
   app_id: pvhiBwpfHOUBspkJ5iEJ5LFw-gzGzoHsz
   app_key: LrKlAVEWOYfv1JwbdQGXAl3K
 
@@ -555,15 +564,15 @@ busuanzi_count:
   # custom uv span for the whole site
   site_uv: true
   site_uv_header: 
-  site_uv_footer: <i class="fa fa-users"></i> 总访问量
+  site_uv_footer: <i class="fa fa-users"></i> 本站总访问量
   # custom pv span for the whole site
   site_pv: true
   site_pv_header: 
-  site_pv_footer: <i class="fa fa-user"></i> 访客人数
+  site_pv_footer: <i class="fa fa-user"></i> 本站访客人数
   # custom pv span for one page only
   page_pv: false
-  page_pv_header: <i class="fa fa-file-o"></i> 总阅读数
-  page_pv_footer:
+  page_pv_header: 
+  page_pv_footer: <i class="fa fa-eye"></i> 本文总阅读量
 
 
 # Tencent analytics ID
@@ -681,24 +690,23 @@ motion:
 fancybox: true
 
 # Progress bar in the top during page loading.
-pace: false
+pace: true
 # Themes list:
-#pace-theme-big-counter
-#pace-theme-bounce
-#pace-theme-barber-shop
-#pace-theme-center-atom
-#pace-theme-center-circle
-#pace-theme-center-radar
-#pace-theme-center-simple
-#pace-theme-corner-indicator
-#pace-theme-fill-left
-#pace-theme-flash
-#pace-theme-loading-bar
-#pace-theme-mac-osx
-#pace-theme-minimal
-# For example
-# pace_theme: pace-theme-center-simple
-pace_theme: pace-theme-minimal
+#pace_theme: pace-theme-big-counter
+pace_theme: pace-theme-bounce
+#pace_theme: pace-theme-barber-shop
+#pace_theme: pace-theme-center-atom
+#pace_theme: pace-theme-center-circle
+#pace_theme: pace-theme-center-radar
+#pace_theme: pace-theme-center-simple
+#pace_theme: pace-theme-corner-indicator
+#pace_theme: pace-theme-fill-left
+##pace_theme: pace-theme-flash
+#pace_theme: pace-theme-loading-bar
+#pace_theme: pace-theme-mac-osx
+##pace_theme: pace-theme-minimal
+#pace_theme: pace-theme-center-simple
+##pace_theme: pace-theme-minimal
 
 # Canvas-nest
 canvas_nest: true
