添加新文章，添加里程碑页

--- a/_config.yml
+++ b/_config.yml
@@ -95,3 +95,4 @@ deploy:
   repo: 
     github: git@github.com:do-do-do/do-do-do.github.io.git
     #coding: git@git.coding.net:melville/melville.git
+    #gitee: git@gitee.com:melville/melville.git
